Fix dark mode css

--- a/assets/css/common/custom.css
+++ b/assets/css/common/custom.css
@@ -41,7 +41,7 @@
   }
   
   .home-info a {
-	color: #1a0dab;
+	color: #1EA69A;
 	text-decoration: none;
   }
   
